--- a/session_03/lab_05/initial/cities/gradle/wrapper/gradle-wrapper.properties
+++ b/session_03/lab_05/initial/cities/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Feb 15 08:03:53 PST 2015
+#Sun Dec 20 11:38:21 EST 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-1.12-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.9-bin.zip
