--- a/session_04/lab_07/initial/hello-spring-boot/build.gradle
+++ b/session_04/lab_07/initial/hello-spring-boot/build.gradle
@@ -3,8 +3,12 @@ buildscript {
         springBootVersion = '1.3.1.RELEASE'
     }
     repositories {
-        mavenCentral()
-        jcenter()
+        maven {
+	    url "http://repo1.maven.org/maven2"
+	} 
+        jcenter {
+            url "http://jcenter.bintray.com/"
+	}
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -26,7 +30,9 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven {
+        url "http://repo1.maven.org/maven2"
+    } 
 }
 
 dependencies {
