--- a/session_01/lab_01/spring-music/gradle/wrapper/gradle-wrapper.properties
+++ b/session_01/lab_01/spring-music/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Dec 20 11:34:52 EST 2015
+#Mon Mar 21 18:00:18 EDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-2.9-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.12-bin.zip
